fix: fixed editor and ruler on small screen

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,5 @@
 :root {
+    /* Colors */
     --primary: 194, 231, 255;
     --primary-dark: 178, 215, 239;
     --blue: 66, 133, 244;
@@ -10,6 +11,12 @@
     --text-disabled: 173, 177, 180;
     --edit-tools-background: 236, 243, 250;
     --edit-tools-color: 68, 71, 70;
+
+    /* Screen widths */
+    --xs: 400px;
+    --sm: 600px;
+    --md: 900px;
+    --lg: 1200px;
 }
 
 /* Generic classes */
