--- a/src/components/Editor/Editor.css
+++ b/src/components/Editor/Editor.css
@@ -3,15 +3,13 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    position: relative;
 }
 
 .editor {
-    /* width: 794px; */
-    /* height: 1123px; */
     background: white;
     border: 1px solid rgb(var(--text-disabled));
     margin: 20px;
+    cursor: text;
 }
 
 .vertical-ruler {
@@ -21,4 +19,10 @@
     width: 5px;
     writing-mode: vertical-lr;
     -ms-writing-mode: tb-lr;
+}
+
+@media screen and (max-width: 900px) {
+    .editor-container {
+        align-items: flex-start;
+    }
 }
