--- a/src/components/Editor/Ruler/HorizontalRuler.css
+++ b/src/components/Editor/Ruler/HorizontalRuler.css
@@ -23,3 +23,10 @@
     transform: translateX(-50%);
     background-color: black;
 }
+
+@media screen and (max-width: 900px) {
+    .horizontal-ruler {
+        left: 20px;
+        transform: translateX(0px);
+    }
+}
